# fake-evo

./: .dockerignore  .gitignore  CLAUDE.md  README.md
evo-gateway/: gateway.js  package-lock.json  package.json
fake-auth/: .dockerignore  .gitignore  .prettierrc.js  README.md  jest.config.ts  package.json  pnpm-lock.yaml  tsc_watch.bat  tsconfig.json  webpack.config.api-serverless.js  webpack.config.api.js  webpack.config.js  webpack.config.nestjs.js
fake-node/: BONUS_SETTLEMENT_FIX.md  PM2_GUIDE.md  babylonvg.evo-games.com_Archive [25-10-15 20-07-11].har  deploy-all.sh  ecosystem.config.js  ormconfig.json  package-lock.json  package.json  pm2logs.rtf  pnpm-lock.yaml  run deploy prod fake seamless.bat  run deploy prod fake-api.bat  run deploy prod token-generator.bat  run deploy qa fake-api.bat  run fake-api prod-local.bat  run fake-api prod.bat  run_deploy_fake_api_1_blue  run_deploy_fake_api_1_green  run_deploy_fake_api_2_lemon  run_deploy_fake_api_2_tomato  run_deploy_fake_api_3_gold  run_deploy_fake_api_3_silver  run_deploy_fake_api_4_apple  run_deploy_fake_api_4_grape  run_deploy_fake_seamless  run_deploy_token_generator  run_deploy_token_generator_pluto  serverless.fake-api.yml  serverless.seamless.fake.yml  serverless.token-generator.pluto.yml  tsc_watch  (+4 more)
video-proxy-rust/: .dockerignore  .gitignore  Cargo.toml
video-proxy-rust/doc/: Rust 사용법.txt
video-proxy-rust/docker/: arm64-fake-video-proxy.Dockerfile
video-proxy-rust/script/: prod-video-proxy-stop
video-proxy-rust/src/: main.rs  main2.rs  main3.rs  main4.rs  main5.rs  main6.rs  main7.rs  main8.rs
(+455 files in other folders)
