[package]
name = "main"
version = "0.1.0"
edition = "2018"

[dependencies]
argh = "0.1.12"
bytes = "1.6.0"
futures-channel = "0.3.30"
futures-util = "0.3.30"
http-body-util = "0.1.2"
hyper = "1.3.1"
hyper-util = { version = "0.1", features = ["full"] }
mongodb = "3.0.0"
openssl = "0.10.64"
rustls = "0.23.10"
rustls-pemfile = "2.1.2"
serde = "1.0.203"
tokio = { version = "1.38.0", features = ["full"] }
tokio-rustls = "0.26.0"
tokio-tungstenite = { version = "0.23.1", features = ["native-tls"] }
tokio-util = "0.7.11"
url = "2.5.2"
uuid = "1.9.1"
